--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
+    <!-- Importando as fontes -->
+    <link href="https://api.fontshare.com/v2/css?f[]=general-sans@500,400,700&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,15 +13,22 @@
     <link rel="stylesheet" href="{{ url_for('static', filename="css/style.css") }}">
 </head>
 <body>
-    <h1>Purple Velvet</h1>
-    {% if user %} <!-- Sintaxe Jinja (ou Python) para usar uma condicional dentro do HTML-->
-        <p>Bem-vindo ao sistema {{ user }}.</p>
-    {% else %}
-        <p>Bem-vindo ao sistema, faça um login ou se cadastre para continuar.</p>
-        <a href="./login.html">Fazer Login</a>
-        <a href="./register.html">Criar conta</a>
-    {% endif %}
-
+    <main>
+        <div class="container">
+            <div>
+                <h1>Purple Velvet</h1>
+                {% if user %} <!-- Sintaxe Jinja (ou Python) para usar uma condicional dentro do HTML-->
+                    <p>Bem-vindo ao sistema {{ user }}.</p>
+                {% else %}
+                    <p>Bem-vindo ao sistema, faça um login ou se cadastre para continuar.</p>
+                    <div class="buttons">
+                        <a href="./login.html" id="loginButton">Fazer Login</a>
+                        <a href="./register.html" id="registerButton">Criar conta</a>
+                    </div>
+                {% endif %}
+            </div>
+        </div>
+    </main>
     <script src="{{ url_for('static', filename="js/script.js") }}"></script>
 </body>
 </html>
