--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -1,10 +1,15 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 <head>
+    <!-- Importando as fontes -->
+    <link href="https://api.fontshare.com/v2/css?f[]=general-sans@500,400,700&display=swap" rel="stylesheet">
+
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Purple Velvet - Register</title>
+
+    <link rel="stylesheet" href="{{ url_for('static', filename="css/registerPage.css") }}">
 </head>
 <body>
     <h1>Página de registro</h1>
