--- a/app/static/css/style.css
+++ b/app/static/css/style.css
@@ -6,56 +6,74 @@
 }
 
 body {
+    width: 100vw; 
+    height: 100vh; 
+    display: flex; 
+    align-items: center; 
+    justify-content: center;
+
     background-image: url(../img/desktop-bg.png);
     background-repeat: no-repeat;
     background-size: 100%;
 }
 
-main {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
+.container h1 {
+    color: #7B2CBF;
 }
 
 .container {
+    width: 420px;
+    height: 640px;
+
     display: flex;
     justify-content: center;
     align-items: center;
-
-    width: 640px;
-    height: 360px;
-
-    margin-top: 96px;
-
-    color: #ffffff;
+    text-align: center;
+    flex-direction: column;
+    
     background: #080808;
     border-radius: 8px;
-}
-
-.container h1 {
-    color: #7B2CBF;
-    font-weight: 700;
+    color: white;
 }
 
 .container p {
-    font-weight: 500px;
-    padding: 48px 0;
+    padding: 48px;
 }
 
-.buttons {
+.container div {
     display: flex;
-    flex-direction: row;
     justify-content: center;
-    gap: 10px;
+    align-items: center;
+    gap: 32px;
 }
 
-a {
-    color: #ffffff;
+.container a {
     text-decoration: none;
-    padding: 16px 48px;
-    background: #7B2CBF;
-    border: none;
-    border-radius: 6px;
+    padding: 16px;
 }
 
+#loginButton {
+    border: 1px solid #7B2CBF;
+    border-radius: 8px;
+    color: white;
+
+    transition: all .2s;
+}
+
+#loginButton:hover {
+    border: 1px solid #7B2CBF;
+    background: #7B2CBF;
+}
+
+#registerButton {
+    background: #7B2CBF;
+    border-radius: 8px;
+    color: white;
+
+    transition: all .2s;
+}
+
+#registerButton:hover {
+    background: white;
+    color: #7B2CBF;
+}
