feat: added .htaccess file to remove HTML extension from the url

--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -22,8 +22,8 @@
         {% else %}
             <p>Bem-vindo ao sistema, faça um login ou se cadastre para continuar.</p>
             <div class="buttons">
-                <a href="./login.html" id="loginButton">Fazer Login</a>
-                <a href="./register.html" id="registerButton">Criar conta</a>
+                <a href="./login" id="loginButton">Fazer Login</a>
+                <a href="./register" id="registerButton">Criar conta</a>
             </div>
         {% endif %}
     </div>
