Style: Register form is now styled, issues with register form functionality
Needs to fix the register form, its copying the value from the password input to the confirm password and for some reason its requiring the confirm password field filled with a value when already have a value that either matches with the first password field.

--- a/app/static/css/loginPage.css
+++ b/app/static/css/loginPage.css
@@ -56,6 +56,7 @@ form label {
     font-weight: 700;
     color: #7B2CBF;
     padding: 48px;
+    font-size: 24px;
 }
 
 form div {
@@ -84,12 +85,13 @@ form div input:checked {
 
 #submitButton {
     cursor: pointer;
-    width: 120px;
+    width: 140px;
 
     border: none;
     border-radius: 6px;
 
     font-weight: 500;
+    font-size: 18px;
     color: white;
     background-color: #7B2CBF;
     
