--- a/app/templates/register.html
+++ b/app/templates/register.html
@@ -14,29 +14,40 @@
     <link rel="stylesheet" href="{{ url_for('static', filename="css/registerPage.css") }}">
 </head>
 <body>
-    <h1>Página de registro</h1>
-    <form action="" method="POST">
-        {{ form.crsf_token }}
+    <div class="container">
+        <h1>Crie sua conta</h1>
+        <form action="" method="POST">
+            {{ form.crsf_token }}
 
-        <!-- Input para o nome do usuário -->
-        <label for="username">Usuário</label>
-        {{ form.username(class="userInput", placeholder="Nome de usuário") }}
+            <!-- Input para o nome do usuário -->
+            <label for="username">Usuário</label>
+            {{ form.username(class="userInput", placeholder="Nome de usuário") }}
+            {{ form.hidden_tag() }}
 
-        <!-- Input para a senha -->
-        <label for="password">Senha</label>
-        {{ form.password(class="pwdInput", placeholder="Sua senha") }}
 
-        <!-- Input para confirmar a senha -->
-        <label for="password">Confirme a senha</label>
-        {{ form.password(class="pwdInput", placeholder="Sua senha")}}
+            <!-- Input para a senha -->
+            <label for="password">Senha</label>
+            {{ form.password(type="password", class="pwdInput", placeholder="Sua senha") }}
+            {{ form.hidden_tag() }}
 
-        <!-- Checkbox para concordar com os termos -->
-        {{ form.confirm }}
-        <label for="confirm">Concordo com os termos LGPD</label>
 
-        <!-- Botão para se cadastrar-->
-        <label for="submit"></label>
-        <button type="submit">Criar conta</button>
-    </form>
+            <!-- Input para confirmar a senha -->
+            <label for="confirmPwd">Confirme a senha</label>
+            {{ form.password(type="password", class="pwdInput", placeholder="Confirme sua senha")}}
+            {{ form.hidden_tag() }}
+
+
+            <!-- Checkbox para concordar com os termos -->
+            <div class="checkbox">
+                {{ form.confirm }}
+                {{ form.hidden_tag() }}
+                <label for="confirm">Concordo com os termos LGPD</label>
+            </div>
+
+            <!-- Botão para se cadastrar-->
+            <label for="submit"></label>
+            <button type="submit" id="submitButton">Criar conta</button>
+        </form>
+    </div>
 </body>
 </html>
